# new_fastapi

fastapi_crud/: pyproject.toml
fastapi_crud/fastapi_crud/: demo.py  depends.py  main.py  query.py
